force-app/main/default/objects/Association__c/Association__c.object-meta.xml
<CustomObject>
    <label>Association</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>