force-app/main/default/objects/Association__c/fields/Relacion__c.field-meta.xml
<CustomField>
    <fullName>Relacion__c</fullName>
    <label>Relacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buena</fullName>
            </value>
            <value>
                <fullName>Mala</fullName>
            </value>
            <value>
                <fullName>Indiferente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>