force-app/main/default/objects/Association__c/fields/Species1__c.field-meta.xml
<CustomField>
    <fullName>Species1__c</fullName>
    <label>Species1</label>
    <referenceTo>Species__c</referenceTo>
    <relationshipLabel>Associations</relationshipLabel>
    <relationshipName>Associations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>