force-app/main/default/objects/Association__c/fields/Species2__c.field-meta.xml
<CustomField>
    <fullName>Species2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Species</label>
    <referenceTo>Species__c</referenceTo>
    <relationshipLabel>Associations (Species)</relationshipLabel>
    <relationshipName>Associations1</relationshipName>
    <type>Lookup</type>
</CustomField>